@@ -3375,13 +3375,12 @@ void SettingInitGlobal(PyMOLGlobals *G,int alloc,int reset_gui)
   set_b(I,cSetting_suppress_hidden,true);
   set_b(I,cSetting_session_compression,0);
   set_f(I,cSetting_movie_fps,30.0);
-  set_f(I,cSetting_movie_fps,30.0);
   set_f(I,cSetting_ray_transparency_oblique,0.0F);
   set_f(I,cSetting_ray_trace_trans_cutoff,0.05);
   set_f(I,cSetting_ray_trace_persist_cutoff,0.10);
-  set_f(I,cSetting_ray_trace_persist_cutoff,0.10);
   set_f(I,cSetting_ray_transparency_oblique_power,1.0F);
   set_f(I,cSetting_ray_scatter,0.0F);
+  set_b(I,cSetting_h_bond_from_proton,1);
 }
 
 
